--- a/X86_64.config
+++ b/X86_64.config
@@ -13,7 +13,7 @@ CONFIG_GRUB_CONSOLE=n
 # EFI支持:
 CONFIG_GRUB_IMAGES=y
 CONFIG_EFI_IMAGES=y
-CONFIG_VMDK_IMAGES=n
+CONFIG_VMDK_IMAGES=y
 
 # IPv6支持:
 CONFIG_IPV6=n  # 如若需要编译docker,需注释此行
